# SmartCalc_v2.0

./: README.md  README_RUS.md
src/: CMakeLists.txt  Dockerfile  Doxyfile  Makefile
src/additional/: base_window.cc  date.cc  plot.cc  qcustomplot.cc  table.cc  top_menu.cc
src/controller/: calculator_controller.cc  credit_controller.cc  deposit_controller.cc
src/debug/: debug.cc
src/include/additional/: base_window.h  date.h  plot.h  qcustomplot.h  table.h  top_menu.h
src/include/controller/: calculator_controller.h  credit_controller.h  deposit_controller.h
src/include/model/: base_model.h  calculator_model.h  credit_model.h  deposit_model.h
src/include/view/: calculator_view.h  credit_view.h  deposit_view.h  main_window.h
src/main/: debug.cc  main.cc
src/model/: base_model.cc  calculator_model.cc  credit_model.cc  deposit_model.cc
src/modules/: debug.cc  main.cc  smartcalc.h
src/modules/additional/: calendar.cc  date.cc  qcustomplot.cc  table.cc  top_menu.cc
src/modules/calculator/: calculator_model.cc  notation.cc  notation.h
src/modules/calculator/include/: calculator_model.h
src/modules/controller/: calculator_controller.cc  credit_controller.cc  deposit_controller.cc
src/modules/include/: calculator_controller.h  calculator_model.h  calculator_view.h  calendar.h  credit_controller.h  credit_model.h  credit_view.h  date.h  deposit_controller.h  deposit_model.h  deposit_view.h  main.h  main_window.h  mainwindow.h  plot.h  table.h  top_menu.h
src/modules/model/: calculator_model.cc  credit_model.cc  deposit_model.cc
src/modules/view/: calculator_view.cc  calculator_view.ui  credit_view.cc  deposit_view.cc  main_window.cc  mainwindow.cc  mainwindow.ui  plot.cc  plot.ui
src/resources/: resource.qrc
src/tests/: CMakeLists.txt  main_test.cc  main_test.h
src/tests/test_modules/: calculator_test.cc  credit_test.cc  deposit_test.cc  smartcalc.cc
src/view/: calculator_view.cc  credit_view.cc  deposit_view.cc  main_window.cc
